--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                 </ul>
 
                 <div class="auth-buttons">
-                    <a href="login.html" class="btn-login">Se connecter</a>
-                    <a href="register.html" class="btn-signup">Créer un compte</a>
+                    <a href="login.html" class="btn-login">Espace Sous-traitant</a>
                 </div>
             </nav>
 
@@ -119,17 +118,11 @@
                     <i class="fas fa-info-circle"></i>
                     <span>À propos</span>
                 </a>
-            </div>
-        </div>
-        <div class="mobile-cta-buttons">
-            <a href="login.html" class="mobile-menu-link">
+                <a href="login.html" class="mobile-menu-link">
                 <i class="fas fa-sign-in-alt"></i>
-                <span>Se connecter</span>
+                <span>Espace Sous-traitant</span>
             </a>
-            <a href="register.html" class="mobile-menu-link">
-                <i class="fas fa-user-plus"></i>
-                <span>Créer un compte</span>
-            </a>
+            </div>
         </div>
         <div class="mobile-copyright">
             <div class="mobile-contact-social">
@@ -151,7 +144,7 @@
     <section class="hero" id="home">
         <div class="slider" id="slider">
             <div class="slides">
-                <div class="slide" style="background: linear-gradient(rgba(230, 57, 70, 0.8), rgba(230, 57, 70, 0.9)), url('assets/01.png') center/cover no-repeat;">
+                <div class="slide" style="background: linear-gradient(rgba(230, 57, 70, 0.85), rgba(29, 29, 29, 0.9)), url('assets/01.png') center/cover no-repeat;">
                     <div class="slide-content">
                         <h2>LOMPUB - Votre Partenaire en Communication</h2>
                         <p>Spécialistes en publicité, habillage, décoration et impression depuis 2008 à Batna</p>
